temp_error.log
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/combine_pitcher_weather_park_away.py", line 27
    merged = pd.merge(
                     ^
SyntaxError: '(' was never closed
